--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Methamphetamine Health Project</title>
 </head>
 <body>
-    <p>Hello Welcome to my Project!</p>
+    <h1>Hello, Welcome to my Project!</h1>
+    <h2>Today I will be teaching you guys about Methamphetamine and its dangers</h2>
+    <h3>Created using Html, Css, and Github.</h3>
+    <p> First, What is Methamphetamine and how does it affect your body and brain?</p>
+    <p> Methamphetamine is a stimulant drug so it makes the user feel energized and pumped up. 
+        It works by creating a large amount of dopamine in the brain and causes the user to become addicted to it.
+        It rewires the brain so if the user stops taking meth he or she will start to feel really sick.
+        Some short term effects of Meth are more energy, higher body temperature, faster heart rate, faster breathing, and not feeling hungry.
+        Some long term effects of Meth are anxiety, confusion, itchy skin, sores, extreme weight loss, and rotting teeth.
+    </p>
 </body>
 </html>
