--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         Some short term effects of Meth are more energy, higher body temperature, faster heart rate, faster breathing, and not feeling hungry.
         Some long term effects of Meth are anxiety, confusion, itchy skin, sores, extreme weight loss, and rotting teeth.
     </p>
-    <img src="images/CrystalMeth.jpg" alt="Image of Crystal Meth Not Loaded" title="Smoking Crystal Meth is just one way people take Meth.", width=300px, height=auto>
+    <img src="images/CrystalMeth.jpg" alt="Image of Crystal Meth Not Loaded" title="Smoking Crystal Meth is just one way people take Meth.", width="300px", height="auto">
 </body>
 </html>
