--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         Some short term effects of Meth are more energy, higher body temperature, faster heart rate, faster breathing, and not feeling hungry.
         Some long term effects of Meth are anxiety, confusion, itchy skin, sores, extreme weight loss, and rotting teeth.
     </p>
+    <p style="font-size: large;">Below is a picture of Crystal Meth</p>
     <img src="images/CrystalMeth.jpg" alt="Image of Crystal Meth Not Loaded" title="Smoking Crystal Meth is just one way people take Meth.", width="300px", height="auto">
+    <p style="font-size: large;">So how do people take Meth? Where does Meth Come From? What is Meth Classified As?</p>
+    <p style="font-size: large;">Methamphetamine can be administered in multiple ways. People can smoke it, swallow it in a form of a pill, snort it, or inject a diluted powder version of it. 
+        Methamphetamine is a mixture of various chemicals. 
+        The main chemical is <b>amphetamine</b> which is a stimulant drug used to treat ADHD and Narcolepsy. 
+        This chemical is mixed with other ingredients such as pseudoephedrine, battery acid, drain cleaners, lantern fuel, and antifreeze. 
+        Legally Methamphetamine is classified on its own as Methamphetamine. Researchers track the number of related overdoses specifically for Methamphetamine. 
+        Chemically, it is a version of amphetamine.</p>
 </body>
 </html>
