--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello, Welcome to my Project!</h1>
     <h2>Today I will be teaching you guys about Methamphetamine and its dangers</h2>
     <h3>Created using HTML, CSS, and Github.</h3>
-    <p style="font-size: large;"> First, What is Methamphetamine and how does it affect your body and brain?</p>
+    <p style="font-size: x-large;"> First, What is Methamphetamine and how does it affect your body and brain?</p>
     <p style="font-size: large;"> Methamphetamine is a stimulant drug so it makes the user feel energized and pumped up. 
         It works by creating a large amount of dopamine in the brain and causes the user to become addicted to it.
         It rewires the brain so if the user stops taking meth he or she will start to feel really sick.
@@ -18,13 +18,15 @@
         Some long term effects of Meth are anxiety, confusion, itchy skin, sores, extreme weight loss, and rotting teeth.
     </p>
     <p style="font-size: large;">Below is a picture of Crystal Meth</p>
-    <img src="images/CrystalMeth.jpg" alt="Image of Crystal Meth Not Loaded" title="Smoking Crystal Meth is just one way people take Meth.", width="300px", height="auto">
-    <p style="font-size: large;">So how do people take Meth? Where does Meth Come From? What is Meth Classified As?</p>
+    <img src="images/CrystalMeth.jpg" alt="Image of Crystal Meth Failed to Load." title="Smoking Crystal Meth is just one way people take Meth.", width="300px", height="auto">
+    <p style="font-size: x-large;">So how do people take Meth? Where does Meth Come From? What is Meth Classified As?</p>
     <p style="font-size: large;">Methamphetamine can be administered in multiple ways. People can smoke it, swallow it in a form of a pill, snort it, or inject a diluted powder version of it. 
         Methamphetamine is a mixture of various chemicals. 
         The main chemical is <b>amphetamine</b> which is a stimulant drug used to treat ADHD and Narcolepsy. 
         This chemical is mixed with other ingredients such as pseudoephedrine, battery acid, drain cleaners, lantern fuel, and antifreeze. 
         Legally Methamphetamine is classified on its own as Methamphetamine. Researchers track the number of related overdoses specifically for Methamphetamine. 
         Chemically, it is a version of amphetamine.</p>
+    <img src="images/MethamphetmineDeathStatChart.jpeg" alt="Methamphetamine Statistic Chart Failed to Load." title="As you can see Meth is the leading drug for Overdoses in almost HALF of the US for 2017", width="500px",height="auto">
+    
 </body>
 </html>
