--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Today I will be teaching you guys about Methamphetamine and its dangers</h2>
     <h3>Created using HTML, CSS, and Github.</h3>
     <p style="font-size: x-large;"> First, What is Methamphetamine and how does it affect your body and brain?</p>
-    <p style="font-size: large;"> Methamphetamine is a stimulant drug so it makes the user feel energized and pumped up. 
+    <p style="font-size: large;"> Methamphetamine (Or Meth for Short) is a stimulant drug so it makes the user feel energized and pumped up. 
         It works by creating a large amount of dopamine in the brain and causes the user to become addicted to it.
         It rewires the brain so if the user stops taking meth he or she will start to feel really sick.
         Some short term effects of Meth are more energy, higher body temperature, faster heart rate, faster breathing, and not feeling hungry.
@@ -27,6 +27,36 @@
         Legally Methamphetamine is classified on its own as Methamphetamine. Researchers track the number of related overdoses specifically for Methamphetamine. 
         Chemically, it is a version of amphetamine.</p>
     <img src="images/MethamphetmineDeathStatChart.jpeg" alt="Methamphetamine Statistic Chart Failed to Load." title="As you can see Meth is the leading drug for Overdoses in almost HALF of the US for 2017", width="500px",height="auto">
+    <p style="font-size: x-large;">Some Other Names for Methamphetamine include</p>
+    <ul>
+        <li>Speed</li>
+        <li>Crank</li>
+        <li>Ice</li>
+        <li>Chalk</li>
+        <li>Wash</li>
+        <li>Trash</li>
+        <li>Dunk</li>
+        <li>Gak</li>
+        <li>Pookie</li>
+        <li>Cookies</li>
+        <li>Christina</li>
+        <li>No Doze</li>
+        <li>White Cross</li>
+        <li>Cotton Candy</li>
+        <li>Rocket Fuel</li>
+        <li>Scooby Snax</li>
+    </ul>
+    <p style="font-size: x-large;">Some Terms for Getting High on Meth Include</p>
+    <ul>
+        <li>Getting Geared Up</li>
+        <li>Chicken Flipping</li>
+        <li>Hot Rolling</li>
+        <li>Getting Fried or Foiled</li>
+        <li>Tweaking</li>
+        <li>Zooming</li>
+        <li>Getting Scattered/Spunned Out</li>
+    </ul>
+    <p style="font: x-large;">Treatment Options and How to Quit</p>
     
 </body>
 </html>
