--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         Legally Methamphetamine is classified on its own as Methamphetamine. Researchers track the number of related overdoses specifically for Methamphetamine. 
         Chemically, it is a version of amphetamine.</p>
     <img src="images/MethamphetmineDeathStatChart.jpeg" alt="Methamphetamine Statistic Chart Failed to Load." title="As you can see Meth is the leading drug for Overdoses in almost HALF of the US for 2017", width="500px",height="auto">
-    <p style="font-size: x-large;">Some Other Names for Methamphetamine include</p>
+    <p style="font-size: x-large;">Some Other Names for Methamphetamine Include:</p>
     <ul>
         <li>Speed</li>
         <li>Crank</li>
@@ -46,7 +46,7 @@
         <li>Rocket Fuel</li>
         <li>Scooby Snax</li>
     </ul>
-    <p style="font-size: x-large;">Some Terms for Getting High on Meth Include</p>
+    <p style="font-size: x-large;">Some Terms for Getting High on Meth Include:</p>
     <ul>
         <li>Getting Geared Up</li>
         <li>Chicken Flipping</li>
@@ -56,7 +56,12 @@
         <li>Zooming</li>
         <li>Getting Scattered/Spunned Out</li>
     </ul>
-    <p style="font: x-large;">Treatment Options and How to Quit</p>
-    
+    <p style="font-size: x-large;">Treatment Options and How to Quit</p>
+    <p>Quitting Meth is Not easy, and many people are here to help. Below are Some Links to Treatment Groups</p>
+    <a href="https://www.samhsa.gov/find-help/national-helpline">SAMHSA's National Helpline or call 1-800-662-4357</a>
+    <a href="https://www.crystalmeth.org/">Crystal Meth Anonymous</a>
+    <p>Quitting Meth involves going through a detox. This can be done alone, with family/friends, or at a detox center. Detox Centers provide a safe space for a person undergoing detox with step by step consulation.</p>
+    <p>Below are symptoms of what a person going through detox could expect.</p>
+    <img src="images/MethWithdrawSymptoms.PNG" alt="Meth Withdraw Flow Chart Failed to Load." width="600px" height="auto">
 </body>
 </html>
