--- a/index.html
+++ b/index.html
@@ -59,9 +59,18 @@
     <p style="font-size: x-large;">Treatment Options and How to Quit</p>
     <p>Quitting Meth is Not easy, and many people are here to help. Below are Some Links to Treatment Groups</p>
     <a href="https://www.samhsa.gov/find-help/national-helpline">SAMHSA's National Helpline or call 1-800-662-4357</a>
+    <p></p>
     <a href="https://www.crystalmeth.org/">Crystal Meth Anonymous</a>
     <p>Quitting Meth involves going through a detox. This can be done alone, with family/friends, or at a detox center. Detox Centers provide a safe space for a person undergoing detox with step by step consulation.</p>
     <p>Below are symptoms of what a person going through detox could expect.</p>
     <img src="images/MethWithdrawSymptoms.PNG" alt="Meth Withdraw Flow Chart Failed to Load." width="600px" height="auto">
+    <p>Thank you For Reading my Project on Meth! Below are my sources</p>
+    <a href="https://www.addictioncenter.com/drugs/meth/withdrawal-detox/">Addiction Center</a>
+    <a href="https://americanaddictioncenters.org/meth-treatment/slang-names">American Addiction Center</a>
+    <a href="https://www.drugabuse.gov/publications/drugfacts/methamphetamine">Drug Abuse.gov</a>
+    <a href="https://www.drugfreeworld.org/drugfacts/crystalmeth/what-is-meth-made-from.html">Drug Free World</a>
+    <p>National Institute on Drug Abuse; National Institutes of Health; U.S. Department of Health and Human Services.    </p>
+    <p>You Can Find a link to this Github Repository <a href="https://github.com/Daniel-Hogan/MethHealthProject">here</a></p>
+    
 </body>
 </html>
